--- a/package.json
+++ b/package.json
@@ -4,5 +4,5 @@
     "version": "0.1.0",
     "unity": "2020.1",
     "unityRelease": "0a15",
-    "displayName": "THShader",
+    "displayName": "THShader"
 }
